# stargaze

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
crates/stargaze-client/: Cargo.toml  README.md  build.rs
crates/stargaze-client/src/: lib.rs  main.rs
crates/stargaze-client/src/decode/: ffmpeg.rs  mod.rs  opus_dec.rs
crates/stargaze-client/src/render/: audio.rs  gl.rs  input.rs  mod.rs  sdl.rs  stats.rs
crates/stargaze-client/src/transport/: mod.rs  quic.rs  receiver.rs
crates/stargaze-client/tests/: transport_integration.rs
crates/stargaze-core/: Cargo.toml  README.md
crates/stargaze-core/src/: audio.rs  capture.rs  config.rs  decode.rs  encode.rs  error.rs  input.rs  lib.rs  logging.rs  mic_forward.rs  transport.rs
crates/stargaze-server/: Cargo.toml  README.md  build.rs
crates/stargaze-server/src/: main.rs
crates/stargaze-server/src/audio/: mod.rs  pipewire_audio.rs
crates/stargaze-server/src/capture/: mod.rs  pipewire.rs  portal.rs
crates/stargaze-server/src/encode/: convert.rs  egl_cuda.rs  ffmpeg.rs  mod.rs  opus_enc.rs
crates/stargaze-server/src/input/: mod.rs  uinput.rs
crates/stargaze-server/src/transport/: mod.rs  quic.rs  sender.rs
docs/: roadmap.md
docs/specs/: 2026-03-31-network-transport-design.md  2026-03-31-stargaze-architecture-design.md  2026-03-31-video-capture-design.md  2026-03-31-video-encoding-design.md  2026-04-02-video-decoding-rendering-design.md  2026-04-04-audio-capture-encoding-design.md  2026-04-04-audio-decoding-playback-design.md  2026-04-04-cursor-rendering-design.md  2026-04-04-input-forwarding-design.md  2026-04-04-mic-forwarding-design.md
plans/: 2026-03-31-network-transport.md  2026-03-31-scaffolding.md  2026-03-31-video-capture.md  2026-03-31-video-encoding.md  2026-04-01-session-summary.md  2026-04-02-video-decoding-rendering.md  2026-04-04-audio-capture-encoding.md  2026-04-04-audio-decoding-playback.md  2026-04-04-cursor-rendering.md  2026-04-04-input-forwarding.md  2026-04-04-mic-forwarding.md  egl-gl-cuda-dmabuf-import.md  fix-client-lag-and-gray-frames.md  fix-green-flickering-artifacts.md
