[package]
name = "stargaze-client"
version.workspace = true
edition.workspace = true

[dependencies]
stargaze-core = { path = "../stargaze-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quinn = "0.11.9"
rustls = "0.23.37"
bytes = "1.11.1"
