[package]
name = "stargaze-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
stargaze-core = { path = "../stargaze-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quinn = "0.11.9"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "logging", "tls12"] }
bytes = "1.11.1"
ffmpeg-next = "7"
ffmpeg-sys-next = "7"
sdl2 = { version = "0.37", features = ["unsafe_textures"] }
opus = "0.3"
libc = "0.2"
font8x8 = "0.3"
khronos-egl = { version = "6", features = ["dynamic"] }
gl = "0.14"

[dev-dependencies]
rcgen = "0.14.7"
