[package]
name = "stargaze-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
directories = "6"
postcard = { version = "1.1.3", features = ["alloc"] }
tokio = { version = "1.51.0", features = ["process"] }
anyhow = "1.0.102"

[dev-dependencies]
libc = "0.2"
tokio = { version = "1.51.0", features = ["rt", "macros", "time"] }
