[package]
name = "stargaze-server"
version.workspace = true
edition.workspace = true

[dependencies]
stargaze-core = { path = "../stargaze-core" }
anyhow = "1"
ashpd = { version = "0.13", features = ["pipewire", "screencast"] }
clap = { version = "4", features = ["derive"] }
ffmpeg-next = "7"
ffmpeg-sys-next = "7"
libc = "0.2"
pipewire = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pipewire-sys = "0.9"
quinn = "0.11.9"
rcgen = "0.14.7"
bytes = "1.11.1"
directories = "6"
